<resources>
    <string name="app_name">Flickr Gallery</string>
    <string name="app_dir" translatable="false">FlickrGallery</string>
    <string name="app_url" translatable="false">
        https://play.google.com/store/apps/details?userId=com.choliy.igor.todolist</string>
    <string name="apps_url" translatable="false">
        https://play.google.com/store/search?q=igor%20choliy&amp;c=apps</string>
    <string name="broadcast_action_name" translatable="false">
        com.choliy.igor.flickrgallery.ACTION_SHOW_NOTIFICATION</string>
    <string name="broadcast_permission" translatable="false">
        com.choliy.igor.flickrgallery.PERMISSION_PRIVATE</string>

    <!-- Info Text-->
    <string name="text_hint_search">Search photo</string>
    <string name="text_oops">oops!</string>
    <string name="text_no_connection">No internet connection</string>
    <string name="text_no_results">No results for your query</string>
    <string name="text_wrong_uri">Wrong URI to download data</string>
    <string name="text_no_browser">There is no browser on your device</string>
    <string name="text_search_query">Search query was restored</string>
    <string name="text_exit">Exit the application?</string>
    <string name="text_permission">You can\'t download picture without this permission</string>
    <string name="text_new_pictures">You have new pictures from search query - \"%1$s\"</string>
    <string name="text_email" translatable="false">choliy.igor@gmail.com</string>
    <string name="text_subject" translatable="false">About \"Flickr Gallery\"</string>
    <string name="text_hello" translatable="false">Hello Igor.\n\n\n</string>

    <!-- Dialog About -->
    <string name="dialog_about_title">About App</string>
    <string name="dialog_app_version" translatable="false">v1.0.1</string>
    <string name="dialog_message">
        Application which allows you to search,
        view and save the last public photos from Flickr service</string>
    <string name="dialog_issue">
        If you find translating issue, please send me an email or write feedback</string>
    <string name="dialog_developer" translatable="false">© %1$s by Igor Choliy</string>
    <string name="dialog_url" translatable="false">https://www.linkedin.com/in/choliy</string>
    <string name="dialog_close_btn">close</string>
    <string name="dialog_feedback_btn">feedback</string>
    <string name="dialog_email_btn">email</string>

    <!-- Dialog History -->
    <string name="dialog_history_title">Search History</string>
    <string name="dialog_history_empty">History is empty</string>
    <string name="dialog_history_text">Get started by searching new photos</string>
    <string name="dialog_start_btn">start search</string>
    <string name="dialog_clear_btn">clear history</string>

    <!-- Dialog Clear-Restore -->
    <string name="dialog_clear_message">Do you really want to clear history?</string>
    <string name="dialog_restore_message">Do you really want to restore default settings?</string>
    <string name="dialog_restore_cleaned">All history has been cleaned</string>
    <string name="dialog_restore_restored">All history has been restored</string>
    <string name="dialog_restore_removed">History has been removed</string>
    <string name="dialog_restore_restored_single">History has been restored</string>
    <string name="dialog_undo_btn">undo</string>
    <string name="dialog_yes_btn">yes</string>
    <string name="dialog_no_btn">no</string>

    <!-- Saved Pictures -->
    <string name="text_no_saved_pic">No saved pictures</string>
    <string name="text_no_saved_desc">Get started by saving new pictures</string>
    <string name="text_delete_message">Do you really want to delete all saved pictures?</string>
    <string name="text_delete_single_removed">Picture has been removed</string>
    <string name="text_delete_single_restored">Picture has been restored</string>
    <string name="text_delete_all_removed">All saved pictures has been removed</string>
    <string name="text_delete_all_restored">All saved pictures has been restored</string>
    <string name="text_delete_nothing">Nothing to delete</string>
    <string name="text_already_saved">Current picture already saved</string>
    <string name="text_already_downloaded">Current picture already downloaded</string>

    <!-- Navigation Drawer -->
    <string name="nav_tools">Tools</string>
    <string name="nav_saved_pictures">Saved pictures</string>
    <string name="nav_history">Search history</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_group_name">Communication</string>
    <string name="nav_about">About</string>
    <string name="nav_share">Share</string>
    <string name="nav_email">Email</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_apps">More Apps</string>

    <!-- Fab Text -->
    <string name="fab_browser">Open in browser</string>
    <string name="fab_web">Go web</string>
    <string name="fab_copy">Copy</string>
    <string name="fab_copied">URL copied:\n\n%1$s</string>
    <string name="fab_share">Share</string>
    <string name="fab_save">Save</string>
    <string name="fab_download">Download</string>
    <string name="fab_downloaded">Picture downloaded</string>
    <string name="fab_downloading">Downloading…</string>
    <string name="fab_picture_saved">Picture saved</string>

    <!-- Picture Fragment Text -->
    <string name="text_picture_title">Title:</string>
    <string name="text_picture_date">Date:</string>
    <string name="text_picture_description">Description:</string>
    <string name="text_picture_res">Resolution:</string>
    <string name="text_picture_res_loading">Loading…</string>
    <string name="text_picture_res_data" translatable="false">%1$s x %2$s</string>
    <string name="text_empty_title">No picture title</string>
    <string name="text_empty_date">No date info</string>
    <string name="text_empty_description">No picture description</string>
    <string name="text_copied_title">Title copied</string>
    <string name="text_copied_date">Date copied</string>
    <string name="text_copied_resolution">Resolution copied</string>
    <string name="text_copied_description">Description copied</string>

    <!-- Preferences Text -->
    <string name="pref_category_ui">UI Settings</string>
    <string name="pref_grid_size_title">Grid size</string>
    <string name="pref_grid_style_title">Grid style</string>
    <string name="pref_animation_title">Picture animation</string>
    <string name="pref_animation_summary">Scale animation after finish loading picture</string>
    <string name="pref_splash_title">Splash screen</string>
    <string name="pref_splash_summary">Animation when application starts</string>
    <string name="pref_category_extra">Extra Settings</string>
    <string name="pref_picture_title">Pictures uploaded per time</string>
    <string name="pref_notification_title">Gallery notification</string>
    <string name="pref_notification_summary">Notify about new available pictures from last search query</string>
    <string name="pref_restore_title">Default settings</string>
    <string name="pref_restore_summary">Restore default settings</string>
    <string name="pref_restore_info">Default settings was restored</string>

    <!-- Preferences Keys -->
    <string name="pref_key_first_start" translatable="false">key_first_start</string>
    <string name="pref_key_search" translatable="false">key_search</string>
    <string name="pref_key_last_id" translatable="false">key_last_id</string>
    <string name="pref_key_grid" translatable="false">key_grid</string>
    <string name="pref_key_style" translatable="false">key_style</string>
    <string name="pref_key_animation" translatable="false">key_animation</string>
    <string name="pref_key_splash" translatable="false">key_splash</string>
    <string name="pref_key_picture" translatable="false">key_picture</string>
    <string name="pref_key_notification" translatable="false">key_notification</string>
    <string name="pref_key_restore" translatable="false">key_restore</string>

    <!-- Grid Size Arrays -->
    <string name="pref_grid_size_label_1" translatable="false">1 x 2</string>
    <string name="pref_grid_size_label_2" translatable="false">2 x 3</string>
    <string name="pref_grid_size_label_3" translatable="false">3 x 5</string>
    <string name="pref_grid_size_label_4" translatable="false">4 x 7</string>
    <string name="pref_grid_size_label_5" translatable="false">5 x 8</string>

    <string name="pref_grid_size_value_1" translatable="false">12</string>
    <string name="pref_grid_size_value_2" translatable="false">23</string>
    <string name="pref_grid_size_value_3" translatable="false">35</string>
    <string name="pref_grid_size_value_4" translatable="false">47</string>
    <string name="pref_grid_size_value_5" translatable="false">58</string>

    <!-- Grid Style Arrays -->
    <string name="pref_grid_style_label_1">Simple style</string>
    <string name="pref_grid_style_label_2">Divider style</string>
    <string name="pref_grid_style_label_3">Card style</string>

    <string name="pref_grid_style_value_1" translatable="false">simple</string>
    <string name="pref_grid_style_value_2" translatable="false">divider</string>
    <string name="pref_grid_style_value_3" translatable="false">card</string>

    <!-- Picture Arrays -->
    <string name="pref_picture_label_100">100 pictures</string>
    <string name="pref_picture_label_200">200 pictures</string>
    <string name="pref_picture_label_300">300 pictures</string>
    <string name="pref_picture_label_400">400 pictures</string>
    <string name="pref_picture_label_500">500 pictures</string>

    <string name="pref_picture_value_100" translatable="false">100</string>
    <string name="pref_picture_value_200" translatable="false">200</string>
    <string name="pref_picture_value_300" translatable="false">300</string>
    <string name="pref_picture_value_400" translatable="false">400</string>
    <string name="pref_picture_value_500" translatable="false">500</string>

    <!-- Fonts -->
    <string name="font_normal" translatable="false">"font/raleway_normal.ttf"</string>
    <string name="font_bold" translatable="false">"font/raleway_bold.ttf"</string>

    <!-- Parse -->
    <string name="text_def_description" translatable="false">{\"_content\":\"\"}</string>
    <string name="text_replace_chars" translatable="false">{\"_content\":\"</string>

</resources>