<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_category_main">

        <ListPreference
            android:defaultValue="@string/pref_grid_value_3"
            android:entries="@array/array_grid_label"
            android:entryValues="@array/array_grid_value"
            android:icon="@drawable/ic_apps"
            android:key="@string/pref_key_grid"
            android:summary="@string/pref_grid_label_3"
            android:title="@string/pref_grid_title"/>

        <ListPreference
            android:defaultValue="@string/pref_picture_value_100"
            android:entries="@array/array_picture_label"
            android:entryValues="@array/array_picture_value"
            android:icon="@drawable/ic_image"
            android:key="@string/pref_key_picture"
            android:summary="@string/pref_picture_label_100"
            android:title="@string/pref_picture_title"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_extra">

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_animation"
            android:key="@string/pref_key_animation"
            android:summary="@string/pref_animation_summary"
            android:title="@string/pref_animation_title"/>

        <Preference
            android:icon="@drawable/ic_history"
            android:key="@string/pref_key_restore"
            android:summary="@string/pref_restore_summary"
            android:title="@string/pref_restore_title"/>

    </PreferenceCategory>

</PreferenceScreen>