<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/nav_tools">

        <menu>

            <item
                android:id="@+id/nav_saved"
                android:icon="@drawable/ic_pictures"
                android:title="@string/nav_saved_pictures"/>

            <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history"
                android:title="@string/nav_history"/>

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings"/>

        </menu>

    </item>

    <item android:title="@string/nav_group_name">

        <menu>

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/nav_about"/>

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/nav_share"/>

            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/ic_email"
                android:title="@string/nav_email"/>

            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/nav_feedback"/>

            <item
                android:id="@+id/nav_apps"
                android:icon="@drawable/ic_apps"
                android:title="@string/nav_apps"/>

        </menu>

    </item>

</menu>