<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/layout_no_history"
    style="@style/InfoLayoutStyle"
    tool:visibility="visible">

    <ImageView
        android:layout_width="@dimen/dimen_image_dialog_size"
        android:layout_height="@dimen/dimen_image_dialog_size"
        android:layout_marginBottom="@dimen/dimen_small_margin"
        android:contentDescription="@null"
        android:src="@drawable/ic_empty_history"/>

    <TextView
        style="@style/InfoTextStyle"
        fontPath="@string/font_bold"
        android:text="@string/dialog_history_empty"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"/>

    <TextView
        style="@style/InfoTextStyle"
        android:layout_marginTop="@dimen/dimen_list_card_margin"
        android:text="@string/dialog_history_text"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/btn_history_start"
        style="@style/DialogButtonStyle"
        android:layout_marginTop="@dimen/dimen_material_margin"
        android:maxWidth="@dimen/dimen_dialog_min_size"
        android:text="@string/dialog_start_btn"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

</LinearLayout>