<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/dimen_medium_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dimen_medium_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_about_title"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/colorTextBlack"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_material_margin"
            android:text="@string/dialog_app_version"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/colorTextLightGray"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_message"
        android:textColor="@color/colorTextBlack"/>

    <include layout="@layout/view_contacts"/>

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/buttonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/dimen_small_margin"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/dimen_list_card_margin"
        android:text="@string/dialog_close_btn"
        android:textAllCaps="true"
        android:textColor="@drawable/selector_dialog"
        android:textStyle="bold"/>

</LinearLayout>