<?xml version="1.0" encoding="utf-8"?>
<com.github.clans.fab.FloatingActionMenu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fab_menu_pic"
    style="@style/FabMenuStyle"
    app:menu_animationDelayPerItem="100"
    app:menu_backgroundColor="@color/colorFabBackground"
    app:menu_colorNormal="@color/colorAccent"
    app:menu_colorPressed="@color/colorAccent"
    app:menu_colorRipple="@color/colorPrimary"
    app:menu_fab_hide_animation="@anim/anim_alpha_show"
    app:menu_fab_show_animation="@anim/anim_alpha_hide"
    app:menu_fab_size="normal"
    app:menu_icon="@drawable/ic_add"
    app:menu_labels_colorNormal="@android:color/transparent"
    app:menu_labels_colorPressed="@android:color/transparent"
    app:menu_labels_colorRipple="@color/colorAccent"
    app:menu_labels_cornerRadius="@dimen/dimen_fab_corner_radius"
    app:menu_labels_ellipsize="marquee"
    app:menu_labels_hideAnimation="@anim/anim_scale_hide"
    app:menu_labels_margin="@null"
    app:menu_labels_maxLines="1"
    app:menu_labels_position="left"
    app:menu_labels_showAnimation="@anim/anim_scale_show"
    app:menu_labels_showShadow="false"
    app:menu_labels_singleLine="true"
    app:menu_labels_textColor="@color/colorTextWhite"
    app:menu_labels_textSize="@dimen/dimen_text_small"
    app:menu_openDirection="up"
    app:menu_shadowColor="@color/colorFabShadow"
    app:menu_showShadow="true">

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_web"
        app:fab_colorNormal="@color/colorPrimary"
        app:fab_colorPressed="@color/colorPrimary"
        app:fab_colorRipple="@color/colorAccent"
        app:fab_label="@string/fab_web"
        app:fab_size="normal"/>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_share_gray"
        app:fab_colorNormal="@color/colorPrimary"
        app:fab_colorPressed="@color/colorPrimary"
        app:fab_colorRipple="@color/colorAccent"
        app:fab_label="@string/fab_share"
        app:fab_size="normal"/>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_copy"
        app:fab_colorNormal="@color/colorPrimary"
        app:fab_colorPressed="@color/colorPrimary"
        app:fab_colorRipple="@color/colorAccent"
        app:fab_label="@string/fab_copy"
        app:fab_size="normal"/>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_save"
        app:fab_colorNormal="@color/colorPrimary"
        app:fab_colorPressed="@color/colorPrimary"
        app:fab_colorRipple="@color/colorAccent"
        app:fab_label="@string/fab_save"
        app:fab_size="normal"/>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_download"
        app:fab_colorNormal="@color/colorPrimary"
        app:fab_colorPressed="@color/colorPrimary"
        app:fab_colorRipple="@color/colorAccent"
        app:fab_label="@string/fab_download"
        app:fab_size="normal"/>

</com.github.clans.fab.FloatingActionMenu>