<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="@dimen/dimen_dialog_min_size"
    android:minWidth="@dimen/dimen_dialog_min_size"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dimen_medium_margin"
    android:paddingTop="@dimen/dimen_medium_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_material_margin"
        android:layout_marginStart="@dimen/dimen_medium_margin"
        android:text="@string/dialog_history_title"
        android:textColor="@color/colorTextGray"
        android:textSize="@dimen/dimen_text_medium"
        android:textStyle="bold"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/dimen_small_margin"
            android:paddingEnd="@dimen/dimen_material_margin"
            android:paddingStart="@dimen/dimen_material_margin"
            android:scrollbarThumbVertical="@drawable/shape_scrollbar_gray"
            android:scrollbars="vertical"/>

        <include layout="@layout/view_no_history"/>

        <include layout="@layout/view_progress"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_material_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_history_clear"
            style="@style/DialogButtonStyle"
            android:layout_marginStart="@dimen/dimen_medium_margin"
            android:paddingStart="@dimen/dimen_zero"
            android:text="@string/dialog_clear_btn"/>

        <View style="@style/ViewWeightStyle"/>

        <TextView
            android:id="@+id/btn_history_close"
            style="@style/DialogButtonStyle"
            android:layout_marginEnd="@dimen/dimen_medium_margin"
            android:paddingEnd="@dimen/dimen_zero"
            android:text="@string/dialog_close_btn"/>

    </LinearLayout>

</LinearLayout>