<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/toolbar_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/material_margin"
            android:paddingStart="@dimen/material_margin"
            android:paddingTop="@dimen/material_margin">

            <TextView
                style="@style/PictureSecondaryTextStyle"
                android:text="@string/text_picture_owner"/>

            <TextView
                android:id="@+id/picture_owner"
                style="@style/PicturePrimaryTextStyle"
                fontPath="@string/font_bold"
                android:maxLines="1"
                tools:text="Legolas"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/material_margin">

            <TextView
                style="@style/PictureSecondaryTextStyle"
                android:text="@string/text_picture_title"/>

            <TextView
                android:id="@+id/picture_title"
                style="@style/PicturePrimaryTextStyle"
                fontPath="@string/font_bold"
                android:maxLines="3"
                tools:text="Hey Aragorn! Where is Gimli?"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/progress_view"
                android:layout_width="@dimen/image_list_size"
                android:layout_height="@dimen/image_list_size"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/toolbar_icon_size"
                android:layout_marginTop="@dimen/toolbar_icon_size"
                app:indicatorColor="@color/colorAccent"
                app:indicatorName="BallSpinFadeLoaderIndicator"/>

            <ImageView
                android:id="@+id/picture_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                tools:src="@mipmap/ic_launcher"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/material_margin">

            <TextView
                style="@style/PictureSecondaryTextStyle"
                android:text="@string/text_picture_description"/>

            <TextView
                android:id="@+id/picture_description"
                style="@style/PicturePrimaryTextStyle"
                fontPath="@string/font_bold"
                tools:text="Fellowship of the Ring"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>